[package]
name = "tutorial"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
cargo-expand = "1.0.53"
chrono.workspace = true
ethereum-types = "0.14.1"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "my_benchmark"
harness = false
